# mesotes-benchmark

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-data  LICENSES.md  README.md  pyproject.toml
.github/workflows/: tests.yml
annotation/: adjudication.md  disagreement_templates.md  guidelines.md  ontology.yaml
data/pilot/: dev.jsonl  mock_predictions.jsonl  test_inputs.jsonl  test_labels.jsonl  train.jsonl
data/pilot_v2/: dev.jsonl  development_notes.md  mock_predictions.jsonl  test_inputs.jsonl  test_labels.jsonl  train.jsonl
data/schemas/: prediction_record.schema.json  scenario_input_record.schema.json  scenario_record.schema.json
docs/: analysis_plan.md  baseline_experiments.md  benchmark_protocol.md  dataset_card.md  examples.md  philosophical_framework.md  project_overview.md  quickstart.md  related_work.md  training_workflow.md
notebooks/: pilot_analysis.ipynb
scripts/: adjudication_report.py  build_hf_dataset.py  create_splits.py  evaluate_predictions.py  export_model_prompts.py  make_benchmark_report.py  validate_dataset.py
src/mesotes/: __init__.py  loader.py  metrics.py  schema.py  splits.py  taxonomy.py  validators.py
tests/: conftest.py  test_cli.py  test_counterfactual_metrics.py  test_loader.py  test_metrics.py  test_schema.py  test_taxonomy.py
